# agent-chat-share

./: .gitignore  Cargo.toml  README.md
.serena/: project.yml
src/: adapters.rs  cli.rs  lib.rs  main.rs  model.rs  render.rs  share.rs  skills.rs
src/adapters/: claude.rs  codex.rs  opencode.rs
src/skills/assets/: SKILL.md
src/tui/: app.rs  clipboard.rs  events.rs  mod.rs  ui.rs
tests/: share_claude_to_codex.rs
