[package]
name = "acs"
version = "0.1.0"
edition = "2021"
description = "agent-chat-share: share a chat between Claude Code, Codex, and OpenCode"

[lib]
name = "acs"
path = "src/lib.rs"

[[bin]]
name = "acs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
ratatui = "0.29"
crossterm = "0.28"
